<resources>
    <string name="app_name">task-3.1c</string>
    <string name="progress_level">1/10</string>
    <string name="live_score">Live Score: 0/10</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your score:</string>
    <string name="score">Final score here</string>
    <string name="new_quiz_btn">Take new Quiz</string>
    <string name="finish">Finish</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome_to_the_quiz">Welcome to the Quiz!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="enter_your_name_and_start_the_quiz">Enter your name and start the quiz!</string>
    <string name="quiz_app">Quiz App</string>
    <string name="name">Name:</string>
    <string name="start">START</string>
    <string-array name="question1">
        <item>Continents and Oceans</item>
        <item>Which is the largest ocean on Earth?</item>
        <item>Atlantic Ocean</item>
        <item>Pacific Ocean</item>
        <item>Indian Ocean</item>
        <item>2</item>
    </string-array>

    <string-array name="question2">
        <item>Mountain Ranges</item>
        <item>What is the highest mountain range in the world?</item>
        <item>Himalayas</item>
        <item>Rocky Mountains</item>
        <item>Andes</item>
        <item>1</item>
    </string-array>

    <string-array name="question3">
        <item>World Capitals</item>
        <item>What is the capital of Japan?</item>
        <item>Seoul</item>
        <item>Beijing</item>
        <item>Tokyo</item>
        <item>3</item>
    </string-array>

    <string-array name="question4">
        <item>Deserts of the World</item>
        <item>Which is the largest desert in the world?</item>
        <item>Sahara</item>
        <item>Arabian</item>
        <item>Antarctic</item>
        <item>3</item>
    </string-array>

    <string-array name="question5">
        <item>European Rivers</item>
        <item>Which is the longest river in Europe?</item>
        <item>Rhine</item>
        <item>Volga</item>
        <item>Danube</item>
        <item>2</item>
    </string-array>

    <string-array name="question6">
        <item>Continental Drift</item>
        <item>Who proposed the theory of continental drift?</item>
        <item>Isaac Newton</item>
        <item>Albert Einstein</item>
        <item>Alfred Wegener</item>
        <item>3</item>
    </string-array>

    <string-array name="question7">
        <item>Earth\'s Layers</item>
        <item>What is the outermost layer of the Earth?</item>
        <item>Crust</item>
        <item>Mantle</item>
        <item>Core</item>
        <item>1</item>
    </string-array>

    <string-array name="question8">
        <item>Global Winds</item>
        <item>Which wind belt lies between 30° and 60° latitude in both hemispheres?</item>
        <item>Trade Winds</item>
        <item>Westerlies</item>
        <item>Polar Easterlies</item>
        <item>2</item>
    </string-array>

    <string-array name="question9">
        <item>Tectonic Plates</item>
        <item>Which ocean is getting wider due to tectonic plate movement?</item>
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Indian Ocean</item>
        <item>2</item>
    </string-array>

    <string-array name="question10">
        <item>Climate Zones</item>
        <item>Which climate zone is characterized by high temperatures and heavy rainfall year-round?</item>
        <item>Temperate</item>
        <item>Desert</item>
        <item>Tropical</item>
        <item>3</item>
    </string-array>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>