<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/welcome_to_the_quiz"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Progress_level"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/progress_level" />

        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:indeterminateOnly="false"
            android:max="10"
            android:progress="1"
            android:progressDrawable="@drawable/progress_bar_states" />
    </LinearLayout>

    <TextView
        android:id="@+id/QuestionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000000"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/QuestionDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        android:textColor="#4E4E4E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <Button
            android:id="@+id/Answer1"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/answer_1" />

        <Button
            android:id="@+id/Answer2"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/answer_2" />

        <Button
            android:id="@+id/Answer3"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/answer_3" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="submitClick"
            android:text="@string/submit_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/LiveScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/live_score"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>