<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:text="@string/quiz_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/header" android:textSize="56sp"
        android:textStyle="bold" android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_name_and_start_the_quiz"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/NameEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center">

        <Button
            android:id="@+id/StartButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/start"
            android:textSize="18sp"
            app:iconTint="#673AB7" />
    </LinearLayout>

</LinearLayout>